--- a/gb/24/12/30/n14401498.md
+++ b/gb/24/12/30/n14401498.md
@@ -14,42 +14,46 @@
 <blockquote class="twitter-tweet" data-media-max-width="560">
 <p dir="ltr" lang="zh">天津西站乘车回京，刚上车就上来四个天津铁路公安处的警查身份证、查包，连钱包都要打开检查。还威胁我们不能发视频，否则…<br />
 他们专门检查我和王宇，是有针对性的。是谁指使的？什么目的？<br />
-天津西站，就是当年构陷王宇重伤他们所谓工作人员的地方！如今，又要对我们进行构陷迫害？女警叫董喆，男叫李朝 <ahref="https://t.co/KmqYBdoefm"></a><a href="https://d2agd1dsojkgmu.cloudfront.net/U9lHjNwCg"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="KmqYBdoefm</a></p>
+天津西站，就是当年构陷王宇重伤他们所谓工作人员的地方！如今，又要对我们进行构陷迫害？女警叫董喆，男叫李朝 <ahref="https://t.co/KmqYBdoefm"></a><a href="https://d14a0yccee2yym.cloudfront.net/H6fHjNwCu"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="KmqYBdoefm</a></p>
 <p>— 包龙军 (@baolongjun2015) <ahref="https://twitter.com/baolongjun2015/status/1873565927830409679?ref_src=twsrc%5Etfw">December 30, 2024</a></p></blockquote>
-<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
+<p></p>
 <p>网友留言：“共产党警察几乎没有不违法的，且全部是法盲。没有县级公安机关出具的搜查令，不能搜查他人财物。”</p>
 <p>前美国之音驻京记者叶兵留言说：“2017年8月14日，我和助理艾伦在天津法院外采访‘屠夫吴淦’庭审，遭社会闲杂人员碰瓷找茬儿，后被带进一派出所非法扣押，引发国际关注。我奋力保护手机和其它物品，一高个子恶警对我施暴殴打，执法犯法。数小时后，在天津市外办介入下，我们才被释放。总有一天，要找恶警们算总账。”</p>
 <p>在此之前，王宇和江天勇等律师10月23日上午到魏县代理刘美香案件，刘美香丈夫仇斌用手机拍照时，被特警抢走手机，双方发生冲突，王宇随即报警，却反遭警察带走。11月1日，人权律师王宇在河北邯郸魏县看守所被非法拘留9天后获释。其间因她一直绝食抗议，出现严重脱水，身体极度虚弱，出来时已无法走路和说话，其丈夫包龙军等人紧急将她送医治疗。</p>
 <p>责任编辑：宁峰#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/28/n14319361.md#1">人权律师余文生案开庭 王宇前往旁听被带走</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359020.md#1">美西华人声援江天勇王宇 致电中共公安问责</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360874.md#1">人权律师王宇和江天勇被拘留 王宇绝食抗争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14361006.md#1">709律师魏县办案突遭拘捕 王宇绝食抗议</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/18/n11196004.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(1)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/16/n11726202.md#1" target="_blank">心灵升华 屏东法轮功学员见证大法美好</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/6/n9810260.md#1" target="_blank">林辉：诸葛亮遗迹被毁 责任者江青秘书遭劫</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/21/n4555059.md#1" target="_blank">94岁老人：没有法轮功我早就不在人世了</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396714.md#1">美国女孩自曝前世死因：飞机撞击帝国大厦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398541.md#1">一个台北女生在中国鞋厂工作的回忆录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393481.md#1">圣诞传奇：《是的 维吉尼亚 有圣诞老人》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399500.md#1">【未解之谜】被封400年 四川最神秘旅游禁地：迷魂凼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396454.md#1">【未解之谜】无神论教授濒死带回神的启示 美国将被净化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399663.md#1">【时事金扫描】“傅冬菊计划”背后中共鬼影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400276.md#1">【菁英论坛】中共渗透百变毒计 瞄准新目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400586.md#1">【时事金扫描】莫桑比克排华潮 华人商铺被洗劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396399.md#1">父亲为养家卖掉爱车 41年后儿子给他惊喜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392440.md#1">Costco环球游轮之旅的价格为何令人瞠目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400174.md#1">阿塞拜疆航空客机坠毁 普京发声道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400231.md#1">“口红效应”不再 中国2024年电影票房大跌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399927.md#1">赵露思瘫软坐轮椅送医 工作室回应 已住院10天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400284.md#1">2024世界最美脸孔揭晓 韩星朴彩英首次跻身前十</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400144.md#1">《音速小子3》影评：蛋头博士能否洗白 成趣味悬念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399104.md#1">Golden Child与Rocket Punch合约到期不续约</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400671.md#1">惊人研究：单一茶包可释放数亿颗塑胶微粒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400184.md#1">厨房必备珍宝“食盐”妙用多 别再花冤枉钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392749.md#1">你的大脑天生就喜欢诚实：说谎会使人得病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391656.md#1">化解亲子冲突不用委屈自己！这样沟通最有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399098.md#1">花10分钟做这件事 你的玫瑰在冬天会更坚强</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/30/n14401498.htm">包龙军夫妇在返京火车上遭4警查包 双方起争执</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401498.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
